# OpenRender

./: .gitignore  CMakeLists.txt
assets/shaders/: default.frag  default.vert
include/Meshes/: Cube.h  Pyramid.h
include/Renderer/: Camera.h  EBO.h  Material.h  Mesh.h  MeshData.h  Shader.h  Texture.h  VAO.h  VBO.h
src/: main.cpp
src/Meshes/: Cube.cpp  Pyramid.cpp
src/Renderer/: Camera.cpp  EBO.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
